# Talos

./: .gitignore  AGENTS.md  CursorPrompt.MD  Makefile  README.md  SRS.MD  app.go  app_dev_fallback_test.go  app_dev_per_dir_test.go  app_install.go  app_launchpad_test.go  app_permissions_test.go  app_sdk_log_test.go  app_trust.go  app_updates.go  file_icon_test.go  go.mod  go.sum  main.go  package_asset_server.go  package_asset_server_test.go  package_local_http.go  package_local_http_test.go  wails.json
.github/workflows/: build-installer.yml  ci.yml
docs/: ARCHITECTURE.md  ASSET_DRIVEN_THEMES.md  DEVELOPMENT.md  DEVELOPMENT_FULL.md  MANIFEST_SPEC.md  PHASE1.md  PHASE2_PREP.md  PHASE2_SIGNOFF.md  PHASE3.md  PHASE4.md  PHASE6_RELEASE_POLISH.md  PLUGIN_GUIDE.md  SDK_GUIDE.md  STATUS.md  TINY_APP_INIT.md
docs/build-your-app/: 01-how-talos-loads-apps.md  02-package-layout-and-manifest.md  03-build-a-web-app.md  04-add-a-go-sidecar-binary.md  05-sdk-and-host-bridge.md  06-dev-loop-and-troubleshooting.md  07-talos-ui-and-themes.md  README.md
docs/dev/: CODEBASE_MAP.md  IFRAME_THREAT_MODEL.md  INTEGRATION_TIERS.md  README.md  STARTUP_TO_LAUNCHPAD.md  iframe-bridge.md
frontend/: index.html
frontend/src/: App.svelte
frontend_new/: ARCHITECTURE.md  dark.css  index.html  light.css  styles.css  variables.css
internal/buildmode/: buildmode.go  buildmode_dev.go  buildmode_prod.go  (+7 more)
scripts/: ensure-npm-go-modules.sh  launchpad-devwatch.sh  run_integration_hub.sh
sdk/rust/: Cargo.toml  README.md  build.rs
sdk/rust/src/: lib.rs
sdk/rust/tests/: dial_smoke.rs
(+74 files in other folders)
